feat: 게스트 토큰 조회 기능 추가