@@ -1,14 +1,17 @@
 package com.swyp8team2.auth.domain;
 
+import com.swyp8team2.user.domain.Role;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import static com.swyp8team2.common.util.Validator.validateNull;
 
-public record UserInfo(long userId) implements UserDetails {
+public record UserInfo(long userId, Role role) implements UserDetails {
 
     public UserInfo {
         validateNull(userId);
@@ -16,7 +19,7 @@ public record UserInfo(long userId) implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
